后台分页排序优化

--- a/tourist-web/src/main/webapp/view/wap/index.html
+++ b/tourist-web/src/main/webapp/view/wap/index.html
@@ -211,7 +211,7 @@
                 <p class="kimg dhshouyeicon"></p>
                 <p>首页</p>
             </a>
-            <a href="search.html" th:href="@{/wap/search}" class="weui_navbar_item ">
+            <a href="search.html" class="weui_navbar_item ">
                 <p class="kimg dhsousuoicon"></p>
                 <p>搜索</p>
             </a>
