--- a/tourist-web/src/main/webapp/view/wap/buyerApply.html
+++ b/tourist-web/src/main/webapp/view/wap/buyerApply.html
@@ -137,7 +137,7 @@
 <script src="http://resali.huobanplus.com/cdn/jquery-weui/0.8.2/swiper.min.js"></script>
 <script th:inline="javascript">
     var sendMsgUrl = /*[[@{/wap/sendMsg}]]*/ '../../mock/httpJson.json';
-    var vilaMsgUrl = /*[[@{/wap/sendMsg}]]*/ '../../mock/httpJson.json';
+    var vilaMsgUrl = /*[[@{/wap/vilaMsg}]]*/ '../../mock/httpJson.json';
     $(function () {
 
         $("#businessLicencesUri").on('change', function (e) {
