--- a/tourist-web/src/main/webapp/view/wap/buyerApply.html
+++ b/tourist-web/src/main/webapp/view/wap/buyerApply.html
@@ -136,10 +136,9 @@
 <script src="http://resali.huobanplus.com/cdn/jquery-weui/0.8.2/jquery-weui.min.js"></script>
 <script src="http://resali.huobanplus.com/cdn/jquery-weui/0.8.2/swiper.min.js"></script>
 <script th:inline="javascript">
-    var sendMsgUrl = /*[[@{/wap/sendMsg}]]*/ '../../mock/httpJson.json';
-    var vilaMsgUrl = /*[[@{/wap/vilaMsg}]]*/ '../../mock/httpJson.json';
+    var sendMsgUrl = /*[[@{/wap/sendCode}]]*/ '../../mock/httpJson.json';
+    var vilaMsgUrl = /*[[@{/wap/verifyCode}]]*/ '../../mock/httpJson.json';
     $(function () {
-
         $("#businessLicencesUri").on('change', function (e) {
             var file = $(this)[0].files[0];
             if (file) {
@@ -183,10 +182,10 @@
                     data: {phone: phone},
                     dataType: "json",
                     success: function (data) {
-                        $.alert("短信已发送,2分钟内有效")
+                        $.alert("短信已发送,10分钟内有效")
                     },
                     error: function (error) {
-                        $.alert(error.msg)
+                        $.alert("短信发送失败，请重试")
                     }
                 });
             }
@@ -205,7 +204,7 @@
                         $("#form1").submit();
                     },
                     error: function (error) {
-                        $.alert(error.msg)
+                        $.alert("无效的验证码！请填写正确验证码")
                     }
                 });
             }
