--- a/tourist-web/src/main/webapp/view/wap/my.html
+++ b/tourist-web/src/main/webapp/view/wap/my.html
@@ -99,16 +99,16 @@
     <!--底部高度-->
     <p style="height: 80px; clear: both"></p>
     <!--底部导航-->
-    <div class="weui_navbar daohangs" th:replace="view/wap/bottom.html :: bottom">
-        <a href="index.html" class="weui_navbar_item">
+    <div class="weui_navbar daohangs">
+        <a th:href="@{/wap/}" href="index.html" class="weui_navbar_item">
             <p class="kimg dhshouyeicon"></p>
             <p>首页</p>
         </a>
-        <a href="search.html" class="weui_navbar_item">
+        <a th:href="@{/wap/showSearchView}" href="search.html" class="weui_navbar_item">
             <p class="kimg dhsousuoicon"></p>
             <p>搜索</p>
         </a>
-        <a href="my.html" class="weui_navbar_item weui_bar_item_on">
+        <a th:href="@{/wap/showMyInfo}" href="my.html" class="weui_navbar_item weui_bar_item_on">
             <p class="kimg dhwodeicon"></p>
             <p>我的</p>
         </a>
