--- a/tourist-web/src/main/webapp/view/manage/supplier/main.html
+++ b/tourist-web/src/main/webapp/view/manage/supplier/main.html
@@ -92,7 +92,7 @@
                     <a href="#"><i class="fa fa-edit"></i><span class="nav-label">结算统计</span><span
                             class="fa arrow"></span></a>
                     <ul class="nav nav-second-level">
-                        <li><a class="J_menuItem" href="settlementAccount.html">结算账户</a>
+                        <li><a class="J_menuItem" th:href="@{/supplier/showSettlement}" href="settlementAccount.html">结算账户</a>
                         </li>
                         <li><a class="J_menuItem" href="salesStatistics.html"
                                th:href="@{/supplier/showSaleStatistics}">销售统计</a>
