--- a/tourist-web/src/main/webapp/view/manage/supplier/settlementAccount.html
+++ b/tourist-web/src/main/webapp/view/manage/supplier/settlementAccount.html
@@ -51,17 +51,17 @@
                     <div class="row">
                         <div class="col-sm-3">
                             <div class="well">
-                                <h4 th:text="'已结算：'+${Settled}+'（T+1）'">已结算：10000.00（T+1）</h4>
+                                <h4 th:text="'已结算：'+${settled==null?0:settled}+'（T+1）'">已结算：10000.00（T+1）</h4>
                             </div>
                         </div>
                         <div class="col-sm-3">
                             <div class="well">
-                                <h4 th:text="'未结算：'+${notSettled}">未结算：10000</h4>
+                                <h4 th:text="'未结算：'+${notSettled==null?0:notSettled}">未结算：10000</h4>
                             </div>
                         </div>
                         <div class="col-sm-3">
                             <div class="well">
-                                <h4 th:text="'已提现：'+${withdrawal}">已提现：10000</h4>
+                                <h4 th:text="'已提现：'+${withdrawal==null?0:withdrawal}">已提现：10000</h4>
                             </div>
                         </div>
 
@@ -75,7 +75,7 @@
                 <div class="ibox-title">
                     <div class="form-group">
                     <div class="form-inline">
-                        <input size="50" name="Date" placeholder="时间" class="form-control" type="text">
+                        <input size="50" name="createDate" placeholder="时间" class="form-control" type="text">
                         <button style="width: 120px" type="button" class="btn  btn-success ">筛选</button>
                     </div>
                 </div>
@@ -93,6 +93,7 @@
                         <div class="tab-content">
                             <div id="tab-1" class="tab-pane active">
                                 <table class="table table-hover" data-toggle="table"
+                                       th:attr="data-url=@{/supplier/settledList}"
                                        data-url="../../../mock/supplier/settledList.json"
                                        data-method="get" data-side-pagination="server" data-pagination="true"
                                        data-striped="true" data-page-number="1" data-page-size="10"
@@ -100,15 +101,15 @@
                                     <thead>
                                     <tr>
                                         <th data-field="settlementNo" data-align="center">结算单号</th>
-                                        <th data-field="settlementDate" data-align="center">结算时间</th>
+                                        <th data-field="createTime" data-align="center">结算时间</th>
                                         <th data-field="receivableAccount" data-align="center"
                                             data-sortable="true">应收款</th>
-                                        <th data-field="selfAuditState" data-align="center"
+                                        <th data-field="selfChecking" data-align="center"
                                             data-sortable="true">自审状态</th>
-                                        <th data-field="platformAuditState" data-align="center"
-                                            data-sortable="true">平台审核状态</th>
+                                        <th data-field="platformChecking" data-formatter="platformCheckingFormatter"
+                                            data-align="center">平台审核状态</th>
                                         <th data-formatter="actionFormatter" data-events="actionEvents"
-                                            data-align="center" data-sortable="true">操作</th>
+                                            data-align="center">操作</th>
                                     </tr>
                                     </thead>
                                 </table>
@@ -116,20 +117,20 @@
                             <div id="tab-2" class="tab-pane">
                                 <table class="table table-hover" data-toggle="table"
                                        data-url="../../../mock/supplier/noSettlement.json"
+                                       th:attr="data-url=@{/supplier/notSettledList}"
                                        data-method="get" data-side-pagination="server" data-pagination="true"
                                        data-striped="true" data-page-number="1" data-page-size="10"
                                        data-query-params="getParams">
                                     <thead>
                                     <tr>
-                                        <th data-field="settlementNo" data-align="center">结算单号</th>
-                                        <th data-field="settlementDate" data-align="center">结算时间</th>
-                                        <th data-field="receivableAccount" data-align="center"
-                                            data-sortable="true">应收款</th>
-                                        <th data-field="selfAuditState" data-align="center"
-                                            data-sortable="true">自审状态</th>
-                                        <th data-field="platformAuditState" data-align="center"
-                                            data-sortable="true">平台审核状态</th>
-                                        <th data-align="center" data-sortable="true">操作</th>
+                                        <th data-field="orderNo" data-align="center">订单号</th>
+                                        <th data-field="touristName" data-align="center">商品名称</th>
+                                        <th data-field="orderMoney" data-align="center" data-sortable="true">订单金额</th>
+                                        <th data-field="commission" data-align="center">佣金</th>
+                                        <th data-field="createTime" data-align="center" data-sortable="true">下单时间</th>
+                                        <th data-field="payTime" data-align="center" data-sortable="true">支付时间</th>
+                                        <th data-field="peopleNumber" data-align="center">人员数量</th>
+                                        <th data-align="center">操作</th>
                                     </tr>
                                     </thead>
                                 </table>
