--- a/tourist-web/src/main/webapp/view/manage/platform/supplier/supplier.html
+++ b/tourist-web/src/main/webapp/view/manage/platform/supplier/supplier.html
@@ -24,7 +24,7 @@
     <div class="h">
         <span class="icon-sprite icon-list"></span>
         <div class="bar">
-            <a class="btn-lit" href="supplierList.html">
+            <a class="btn-lit" href="supplierList.html" th:href="@{/distributionPlatform/toSupplierList}">
                 <span>返回管理列表</span></a>
         </div>
     </div>
