--- a/tourist-web/src/main/webapp/view/manage/platform/touristGood/touristGood.html
+++ b/tourist-web/src/main/webapp/view/manage/platform/touristGood/touristGood.html
@@ -25,7 +25,7 @@
     <div class="h">
         <span class="icon-sprite icon-list"></span>
         <div class="bar">
-            <a class="btn-lit" href="touristGoodList.html">
+            <a class="btn-lit" href="touristGoodList.html" th:href="@{/distributionPlatform/toTouristGoodList}">
                 <span>返回管理列表</span></a>
         </div>
     </div>
