--- a/tourist-web/src/main/webapp/view/manage/platform/supplier/supplierList.html
+++ b/tourist-web/src/main/webapp/view/manage/platform/supplier/supplierList.html
@@ -66,7 +66,11 @@
 <script src="../../../../assets/libs/bootstrap-table/bootstrap-table.min.js"></script>
 <script src="../../../../assets/libs/bootstrap-table/bootstrap-table-zh-CN.min.js"></script>
 <script src="http://resali.huobanplus.com/cdn/layer/3.0.1/layer.js"></script>
-<script src="../../../../assets/js/manage/platform/supplierList.js" th:inline="javascript"></script>
+<script th:inline="javascript">
+    addOrUpdateUrl = /*[[@{/distributionPlatform/toAddTouristSupplier}]]*/ "supplier.html";
+    frozenSupplierUrl = /*[[@{/distributionPlatform/frozenSupplier}]]*/ "../../../mock/platform/httpJson.json";
+</script>
+<script src="../../../../assets/js/manage/platform/supplierList.js"></script>
 
 <!--<script>seajs.use(["bootstrap", "bootstrap-table.min", "bootstrap-table-zh-CN", "supplierList"]);</script>-->
 </body>
