--- a/tourist-web/src/main/webapp/view/manage/platform/touristGood/touristGood.html
+++ b/tourist-web/src/main/webapp/view/manage/platform/touristGood/touristGood.html
@@ -47,9 +47,9 @@
                                 <tr>
                                     <th class="control-label">名称：</th>
                                     <td>
-                                        <input readonly name="touristName" type="text" id="touristName"
+                                        <input name="touristName" type="text"
                                                th:value="${touristGood!=null?touristGood.touristName:''}"
-                                               maxlength="50"
+                                               maxlength="50" readonly
                                                class="form-control" placeholder="名称">
                                     </td>
                                     <td rowspan="12">
@@ -60,9 +60,9 @@
                                 <tr>
                                     <th class="control-label">活动类型：</th>
                                     <td>
-                                        <input readonly name="activityType" type="text" id="touristName"
-                                               th:value="${touristGood!=null?touristGood.activityType.activityName:''}"
-                                               maxlength="50"
+                                        <input name="activityType" type="text"
+                                               th:value="${touristGood!=null and touristGood.activityType!=null ?touristGood.activityType.activityName:''}"
+                                               maxlength="50" readonly
                                                class="form-control" placeholder="活动类型">
 
                                         <!--<select readonly name="activityTypeId" class="form-control"-->
@@ -75,9 +75,10 @@
                                 <tr>
                                     <th class="control-label">线路类型：</th>
                                     <td>
-                                        <input readonly name="touristType" type="text" id="touristName"
-                                               th:value="${touristGood!=null?touristGood.touristType.typeName:''}"
+                                        <input name="touristType" type="text"
+                                               th:value="${touristGood!=null and touristGood.touristType!=null?touristGood.touristType.typeName:''}"
                                                maxlength="50"
+                                               readonly
                                                class="form-control" placeholder="线路类型">
                                         <!--<select readonly name="touristType" class="form-control"-->
                                         <!--th:value="${touristGood!=null?touristGood.touristType.typeName:''}"-->
@@ -89,9 +90,10 @@
                                 <tr>
                                     <th class="control-label">线路特色：</th>
                                     <td>
-                                        <input readonly type="text" name="touristFeatures"
+                                        <input type="text" name="touristFeatures"
                                                th:value="${touristGood!=null?touristGood.touristFeatures:''}"
                                                class="form-control"
+                                               readonly
                                                placeholder="联系人">
                                     </td>
                                 </tr>
@@ -100,11 +102,11 @@
                                     <td>
                                         <div style="position: relative; "><!-- container -->
                                             <!--data-toggle="city-picker"-->
-                                            <input readonly type="text" class="form-control" name="destination"
+                                            <input type="text" class="form-control" name="destination"
                                                    id="destination"
-
                                                    value="北京市/北京市/海淀区"
-                                                   th:value="${touristGood!=null?touristGood.destination.toString():''}">
+                                                   th:value="${touristGood!=null?touristGood.destination.toString():''}"
+                                                   readonly>
                                         </div>
                                     </td>
                                 </tr>
@@ -113,11 +115,11 @@
                                     <td>
                                         <div style="position: relative; "><!-- container -->
                                             <!--data-toggle="city-picker"-->
-                                            <input readonly type="text" class="form-control" name="placeOfDeparture"
+                                            <input type="text" class="form-control" name="placeOfDeparture"
                                                    id="placeOfDeparture"
-
                                                    value="北京市/北京市/海淀区"
-                                                   th:value="${touristGood!=null?touristGood.placeOfDeparture.toString():''}">
+                                                   th:value="${touristGood!=null?touristGood.placeOfDeparture.toString():''}"
+                                                   readonly>
                                         </div>
                                     </td>
                                 </tr>
@@ -127,53 +129,59 @@
                                     <td>
                                         <div style="position: relative; ">
                                             <!--data-toggle="city-picker"-->
-                                            <input readonly type="text" class="form-control" name="travelledAddress"
+                                            <input type="text" class="form-control" name="travelledAddress"
                                                    id="travelledAddress"
                                                    value="北京市/北京市/海淀区"
-                                                   th:value="${touristGood!=null?touristGood.travelledAddress.toString():''}">
+                                                   th:value="${touristGood!=null?touristGood.travelledAddress.toString():''}"
+                                                   readonly>
                                         </div>
                                     </td>
                                 </tr>
                                 <tr>
                                     <th class="control-label">价格：</th>
                                     <td>
-                                        <input readonly type="number" name="price"
+                                        <input type="number" name="price"
                                                th:value="${touristGood!=null?touristGood.price:''}" class="form-control"
-                                               placeholder="价格">
+                                               placeholder="价格"
+                                               readonly>
                                         成人
-                                        <input readonly type="text" name="loginName"
-                                               th:value="${touristGood!=null?touristGood.loginName:''}"
+                                        <input type="text" name="loginName"
+                                               th:value="${touristGood!=null?touristGood.childrenDiscount:''}"
                                                class="form-control"
-                                               placeholder="折扣"> 儿童
+                                               placeholder="折扣"
+                                               readonly> 儿童
                                     </td>
                                 </tr>
                                 <tr>
                                     <th class="control-label">返利：</th>
                                     <td>
-                                        <input readonly type="number" name="rebate"
+                                        <input type="number" name="rebate"
                                                th:value="${touristGood!=null?touristGood.rebate:''}"
                                                class="form-control"
-                                               placeholder="百分比"> %
+                                               placeholder="百分比"
+                                               readonly> %
 
                                     </td>
                                 </tr>
                                 <tr>
                                     <th class="control-label">地接人：</th>
                                     <td>
-                                        <input readonly type="text" name="receptionPerson"
+                                        <input type="text" name="receptionPerson"
                                                th:value="${touristGood!=null?touristGood.receptionPerson:''}"
                                                class="form-control"
-                                               placeholder="地接人">
+                                               placeholder="地接人"
+                                               readonly>
 
                                     </td>
                                 </tr>
                                 <tr>
                                     <th class="control-label">联系电话：</th>
                                     <td>
-                                        <input readonly type="text" name="receptionTelephone"
+                                        <input type="text" name="receptionTelephone"
                                                th:value="${touristGood!=null?touristGood.receptionTelephone:''}"
                                                class="form-control"
-                                               placeholder="联系电话">
+                                               placeholder="联系电话"
+                                               readonly>
 
                                     </td>
                                 </tr>
@@ -182,12 +190,13 @@
                                     <td>
                                         <div th:each="route : ${routes}">
                                             <!--/*@thymesVar id="route" type="com.huotu.tourist.entity.TouristRoute"*/-->
-                                            <input readonly type="text" class="form-control "
+                                            <input type="text" class="form-control "
                                                    id="fromDate" name="fromDate" th:value="${route.fromDate}"
-                                                   placeholder="出发时间"/>-
-                                            <input readonly type="text" class="form-control "
-                                                   id="toDate" name="toDate" th:value="${route.fromDate}"
-                                                   placeholder="结束时间"/>
+                                                   placeholder="出发时间"
+                                                   readonly/>-
+                                            <!--<input readonly type="text" class="form-control "-->
+                                            <!--id="toDate" name="toDate" th:value="${route.fromDate}"-->
+                                            <!--placeholder="结束时间"/>-->
                                             人数:<span th:text="${route.maxPeople}">10</span>
                                         </div>
                                     </td>
