--- a/tourist-web/src/main/webapp/view/manage/supplier/settlementAccount.html
+++ b/tourist-web/src/main/webapp/view/manage/supplier/settlementAccount.html
@@ -176,7 +176,7 @@
 <script type="text/javascript" th:inline="javascript">
     /*<![CDATA[*/
 
-    var submitUrl=/*[[@{/supplier/saveTouristGood}]]*/'../../../mock/supplier/httpJson.json';
+    var detailsUrl=/*[[@{/supplier/saveTouristGood}]]*/'settlementDetailsList.html';
     /*]]>*/
 
 </script>
